added Gui and chanded build.sbt back.